<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
        <RelativeLayout
            android:id="@+id/scroll_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        >
            <com.dpcsa.compon.custom_components.ComponImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_txt_inp_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/_txt_inp_login"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dim_12"
                app:hintTextAppearance="@style/txtInpt_12_21">
                <com.dpcsa.compon.custom_components.ComponEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/title"
                    android:hint="@string/signup_name_hint"
                    android:imeOptions="actionNext"
                    app:textError="@string/signup_name_error"
                    app:minLength="2"
                    android:inputType="text"
                    android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_txt_inp_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/_txt_inp_name"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dim_12"
                app:hintTextAppearance="@style/txtInpt_12_21">
                <com.dpcsa.compon.custom_components.ComponEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/title"
                    android:theme="@style/editStyle_21_0"
                    android:hint="@string/signup_last_name_hint"
                    android:imeOptions="actionNext"
                    app:textError="@string/signup_last_name_error"
                    app:minLength="2"
                    android:inputType="text"
                    android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_txt_inp_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/_txt_inp_last_name"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dim_12"
                app:hintTextAppearance="@style/txtInpt_12_21">
                <com.dpcsa.compon.custom_components.ComponEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_email_hint"
                    android:imeOptions="actionNext"
                    app:textError="@string/signup_email_error"
                    app:typeValidate="email"
                    android:maxLines="1"
                    android:inputType="textEmailSubject"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_txt_inp_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/_txt_inp_email"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dim_12"
                app:hintTextAppearance="@style/txtInpt_12_21">
                <com.dpcsa.compon.custom_components.EditTextMask
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/title"
                    android:theme="@style/editStyle_21_0"
                    android:hint="@string/signup_phone_hint"
                    android:imeOptions="actionNext"
                    app:mask="+380 __ ___ ____"
                    android:maxLines="1"
                    android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_txt_inp_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/photo"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dim_12"
                app:hintTextAppearance="@style/txtInpt_12_21">
                <com.dpcsa.compon.custom_components.ComponEditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/title"
                    android:theme="@style/editStyle_21_0"
                    android:hint="@string/signin_login_hint"
                    android:imeOptions="actionNext"
                    app:textError="@string/signup_login_error"
                    app:minLength="5"
                    android:inputType="text"
                    android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_txt_inp_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/_txt_inp_phone"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dim_12"
                app:hintTextAppearance="@style/txtInpt_12_21">
                <com.dpcsa.compon.custom_components.ComponEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/title"
                    android:theme="@style/editStyle_21_0"
                    android:hint="@string/signin_password_hint"
                    android:imeOptions="actionNext"
                    app:isPassword="true"
                    app:validPassword="aA0"
                    app:idShowImg="@drawable/eye_open"
                    app:idHideImg="@drawable/eye_close"
                    app:equalsId="@id/pas_equ"
                    android:maxLines="1"
                    android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/send"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/_txt_inp_pas_equ"
                android:layout_marginTop="@dimen/dim_40"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:background="@drawable/shape_1000"
                android:gravity="center"
                android:text="@string/sell_send_txt"
                android:textSize="@dimen/dim_24"
                android:textColor="@color/white"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_txt_inp_pas_equ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/_txt_inp_password"
                android:layout_marginLeft="@dimen/dim_14"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dim_14"
                app:hintTextAppearance="@style/txtInpt_12_21">
                <com.dpcsa.compon.custom_components.ComponEditText
                    android:id="@+id/pas_equ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_pas_equ_hint"
                    android:imeOptions="actionNext"
                    app:isPassword="true"
                    app:idShowImg="@drawable/eye_open"
                    app:idHideImg="@drawable/eye_close"
                    android:maxLines="1"
                    android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.dpcsa.compon.custom_components.ComponImageView
                android:id="@+id/phot_cl"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:layout_width="@dimen/dim_56"
                android:layout_height="@dimen/dim_56"
                android:src="@drawable/camera"
                android:scaleType="centerCrop"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>