<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <ScrollView
        android:layout_above="@id/ss"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
        <RelativeLayout
            android:id="@+id/scroll_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        >
            <com.dpcsa.compon.custom_components.ComponImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_txt_inp_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dim_12"
                app:hintTextAppearance="@style/txtInpt_12_21">
                <com.dpcsa.compon.custom_components.ComponEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sell_title_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text|textCapSentences"
                    android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_txt_inp_mileage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/year"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dim_12"
                app:hintTextAppearance="@style/txtInpt_12_21">
                <com.dpcsa.compon.custom_components.ComponEditText
                    android:id="@+id/mileage"
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/sell_mileage_hint"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_txt_inp_praice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/_txt_inp_mileage"
                android:layout_below="@id/year"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                app:hintTextAppearance="@style/txtInpt_12_21">
                <com.dpcsa.compon.custom_components.ComponEditText
                    android:id="@+id/praice"
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/sell_praice_hint"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.dpcsa.compon.custom_components.Gallery
                android:id="@+id/gal"
                android:layout_below="@id/_txt_inp_praice"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dim_12"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:indicator="@id/ind_gal"
                />

            <com.dpcsa.compon.custom_components.PagerIndicator
                android:id="@+id/ind_gal"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/_txt_inp_praice"
                android:layout_marginTop="210dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:diametrItem="7dp"
                app:colorNorm="@color/accent"
                app:colorSelect="@color/accentDark"
                />

            <com.dpcsa.compon.custom_components.ComponSpinner
                android:id="@+id/year"
                android:layout_below="@id/marka"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
            />
            <com.dpcsa.compon.custom_components.ComponSpinner
                android:id="@+id/model"
                android:layout_toRightOf="@id/marka"
                android:layout_below="@id/_txt_inp_title"
                android:layout_marginLeft="@dimen/dim_16"
                android:layout_marginTop="10dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
            />
            <com.dpcsa.compon.custom_components.ComponSpinner
                android:id="@+id/marka"
                android:layout_below="@id/_txt_inp_title"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
            />
            <com.dpcsa.compon.custom_components.ComponImageView
                android:id="@+id/photo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="90dp"
                android:layout_width="@dimen/dim_56"
                android:layout_height="@dimen/dim_56"
                android:src="@drawable/camera"
                android:scaleType="centerCrop"
                />

            <com.dpcsa.compon.custom_components.ComponImageView
                android:id="@+id/plus"
                android:layout_below="@id/gal"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_width="@dimen/dim_56"
                android:layout_height="@dimen/dim_56"
                android:padding="@dimen/dim_14"
                android:src="@drawable/_add_circle_outline_ff51aeff"
                android:scaleType="centerCrop"
                />

            <com.dpcsa.compon.custom_components.ComponImageView
                android:id="@+id/del"
                android:layout_toRightOf="@id/plus"
                android:layout_below="@id/gal"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginTop="10dp"
                android:layout_width="@dimen/dim_56"
                android:layout_height="@dimen/dim_56"
                android:padding="@dimen/dim_14"
                android:src="@drawable/_clear_ff51aeff"
                android:scaleType="centerCrop"
                />

            <com.dpcsa.compon.custom_components.ComponImageView
                android:id="@+id/mov"
                android:layout_toRightOf="@id/del"
                android:layout_below="@id/gal"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginTop="10dp"
                android:layout_width="@dimen/dim_56"
                android:layout_height="@dimen/dim_56"
                android:padding="@dimen/dim_14"
                android:src="@drawable/_arrow_back_ios_ff51aeff"
                android:scaleType="centerCrop"
                />

        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/ss"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_56"
    >
        <TextView
            android:id="@+id/send"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dim_40"
            android:layout_width="200dp"
            android:layout_height="@dimen/dim_40"
            android:background="@drawable/shape_1000"
            android:gravity="center"
            android:text="@string/sell_send_txt"
            android:textSize="@dimen/dim_24"
            android:textColor="@color/white"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greyDark"
            />

        <TextView
            android:id="@+id/clear"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dim_24"
            android:layout_width="80dp"
            android:layout_height="@dimen/dim_40"
            android:background="@drawable/shape_1002"
            android:gravity="center"
            android:text="@string/sell_clear_txt"
            android:textSize="@dimen/dim_20"
            />

    </RelativeLayout>
</RelativeLayout>